--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,20 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+#navlogo {
+  display: flex;
+  flex-direction: column;
+  background-color: lightgrey;
+}
+#navlogo .logo {
+  margin: 0 auto;
+  font-size: 4rem;
+}
+#navlogo nav {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
