--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
 // Navigation code here
+#navlogo {
+    display:flex;
+    flex-direction: column;
+    background-color: lightgrey;
+    .logo {
+        margin: 0 auto;
+        font-size: 4rem;
+    }
+    nav {
+        display:flex;
+        flex-direction: row;
+        margin: 0 auto;
+    }
+    
+}
