--- a/css/index.css
+++ b/css/index.css
@@ -164,15 +164,32 @@ p {
   display: flex;
   flex-direction: column;
   background-color: lightgrey;
+  width: 100%;
 }
 #navlogo .logo {
   margin: 0 auto;
   font-size: 4rem;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 #navlogo nav {
   display: flex;
   flex-direction: row;
-  margin: 0 auto;
+  width: 100%;
+  justify-content: center;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+#navlogo a {
+  display: flex;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: black;
+  padding: 0 20px 0 20px;
+}
+#navlogo a:hover {
+  color: blue;
+  opacity: 60%;
 }
 footer {
   color: #22283B;
