--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,14 +3,30 @@
     display:flex;
     flex-direction: column;
     background-color: lightgrey;
+    width:100%;
     .logo {
         margin: 0 auto;
         font-size: 4rem;
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
     nav {
         display:flex;
         flex-direction: row;
-        margin: 0 auto;
+        width:100%;
+        justify-content: center;
+        margin-top: 1%;
+        margin-bottom: 1%;
     }
-    
+    a {
+        display:flex;
+        text-decoration: none;
+        font-size: 1.6rem;
+        color: black;
+        padding: 0 20px 0 20px;
+    }
+    a:hover {
+        color: blue;
+        opacity: 60%;
+    }
 }
