--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+.hoverNav {
+  color: blue;
+  opacity: 50%;
+  transition: 1s ease;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -189,7 +194,8 @@ p {
 }
 #navlogo a:hover {
   color: blue;
-  opacity: 60%;
+  opacity: 50%;
+  transition: 1s ease;
 }
 footer {
   color: #22283B;
