--- a/less/navigation.less
+++ b/less/navigation.less
@@ -26,7 +26,6 @@
         padding: 0 20px 0 20px;
     }
     a:hover {
-        color: blue;
-        opacity: 60%;
+        .hoverNav();
     }
 }
