--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,12 @@
     opacity: 50%;
     transition: 1s ease;
 }
+.button (@color, @font-size) {
+    background-color: #22283A;
+    color:@color;
+    padding:2%;
+    border-radius: 10px;
+    text-align: center;
+    font-size: @font-size;
+    width: 35%;
+}
