--- a/less/mixins.less
+++ b/less/mixins.less
@@ -13,3 +13,13 @@
     font-size: @font-size;
     width: 35%;
 }
+.buttonHover {
+
+        background-color: white;
+        color:#22283A;
+        padding:2%;
+        border-radius: 10px;
+        text-align: center;
+        font-size: 2rem;
+        width: 35%;
+}
