--- a/less/home-page.less
+++ b/less/home-page.less
@@ -65,6 +65,10 @@
       .btn {
         .button(white, 2rem);
       }
+      .btn:hover {
+        .buttonHover();
+        border: 1px solid blue;
+      }
     }
 
     .walk-img {
