--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 #navlogo {
     display:flex;
     flex-direction: column;
-    background-color: lightgrey;
+    background-color: #f2f2f2;
     width:100%;
     .logo {
         margin: 0 auto;
