Finished mobile bottom

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -23,3 +23,12 @@
         font-size: 2rem;
         width: 35%;
 }
+.buttonMobile (@color, @font-size) {
+    background-color: #22283A;
+    color:@color;
+    padding:2%;
+    border-radius: 10px;
+    text-align: center;
+    font-size: @font-size;
+    width: 80%;
+}
