--- a/less/home-page.less
+++ b/less/home-page.less
@@ -50,9 +50,19 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      display:flex;
+      flex-direction: column-reverse;
+    }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0 auto;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -64,6 +74,9 @@
 
       .btn {
         .button(white, 2rem);
+        @media @phone {
+          width:100%;
+        }
       }
       .btn:hover {
         .buttonHover();
@@ -74,6 +87,10 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width:100%;
+        margin: 0 auto;
+      }
       
       img {
         width: 100%;
