Think im done. checking

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,9 @@
         font-size: 4rem;
         margin-top: 1%;
         margin-bottom: 1%;
+        @media @phone {
+            padding: 10px 0 10px 0;
+        }
     }
     nav {
         display:flex;
@@ -17,6 +20,9 @@
         justify-content: center;
         margin-top: 1%;
         margin-bottom: 1%;
+        @media @phone {
+            padding-bottom:10px;
+        }
     }
     a {
         display:flex;
