--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,11 @@ p {
   margin-top: 1%;
   margin-bottom: 1%;
 }
+@media (max-width: 500px) {
+  #navlogo .logo {
+    padding: 10px 0 10px 0;
+  }
+}
 #navlogo nav {
   display: flex;
   flex-direction: row;
@@ -193,6 +198,11 @@ p {
   justify-content: center;
   margin-top: 1%;
   margin-bottom: 1%;
+}
+@media (max-width: 500px) {
+  #navlogo nav {
+    padding-bottom: 10px;
+  }
 }
 #navlogo a {
   display: flex;
@@ -230,6 +240,17 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+  .home .space-images .blast {
+    width: 100%;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
@@ -238,6 +259,11 @@ footer {
 }
 .home .visit-planets {
   padding: 15px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets {
+    padding-bottom: 5px;
+  }
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -256,6 +282,7 @@ footer {
   .home .walk {
     display: flex;
     flex-direction: column-reverse;
+    padding: 15px;
   }
 }
 .home .walk .walk-text {
@@ -271,6 +298,11 @@ footer {
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text h3 {
+    padding-bottom: 10px;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -299,6 +331,11 @@ footer {
   width: 35%;
   border: 1px solid blue;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn:hover {
+    width: 100%;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -307,6 +344,7 @@ footer {
   .home .walk .walk-img {
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 20px;
   }
 }
 .home .walk .walk-img img {
