--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,6 +23,17 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    @media @phone {
+      .sky {
+        display:none;
+      }
+      .launch {
+        display:none;
+      }
+      .blast {
+        width: 100%;
+      }
+    }
 
     img {
       width: 28%;
@@ -34,6 +45,9 @@
 
   .visit-planets {
     padding: 15px;
+    @media @phone {
+      padding-bottom: 5px;
+    }
 
     h3 {
       margin-top: 11px;
@@ -53,6 +67,7 @@
     @media @phone {
       display:flex;
       flex-direction: column-reverse;
+      padding: 15px;
     }
 
     .walk-text {
@@ -66,6 +81,9 @@
 
       h3 {
         margin-bottom: 10px;
+        @media @phone {
+          padding-bottom: 10px;
+        }
       }
 
       p {
@@ -81,6 +99,9 @@
       .btn:hover {
         .buttonHover();
         border: 1px solid blue;
+        @media @phone {
+          width:100%;
+        }
       }
     }
 
@@ -90,6 +111,7 @@
       @media @phone {
         width:100%;
         margin: 0 auto;
+        padding-bottom: 20px;
       }
       
       img {
